--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -1015,7 +1015,7 @@ When fighting otherworldly forces you often have to follow the paths of the supe
 
 看來女王的罪責就是在自毀否定的面具下等待這一切。當我和艾琳把女王逼至牆角，她坦承了一切。她與一個未知惡魔之間的黑暗契約，決定了扎古拉維亞的命運。
 
-與非自然力量戰鬥時，你常常不得不循著超自然法則的道路前進。沙皇波利密爾的鬼魂知道女王簽訂的契約內容。我得找到他的長眠之所，試著與他交談，祈求能解開這個降臨於扎古拉維亞的詛咒癥結。",,OK,,
+與非自然力量戰鬥時，你常常不得不循著超自然法則的道路前進。波利密爾沙皇的鬼魂知道女王簽訂的契約內容。我得找到他的長眠之所，試著與他交談，祈求能解開這個降臨於扎古拉維亞的詛咒癥結。",,OK,,
 3527,194585,The Trial,Data/CodexEntry.lua(00142),,CodexEntry Journal_Entry6 DisplayName,,,,The Trial,The Trial,磨難,,OK,,
 3528,194585,"Fate had finally revealed the purpose it had in store for me.
 
@@ -1029,7 +1029,7 @@ But the ghost of Tzar Borimir showed me the way. It was my destiny to follow his
 
 幾年前，我簽下黑暗契約，獲得了強大的惡魔之力。我記得，當我愛的人們，用生命為我的契約付出代價時，力量所帶來勝利的感覺是如何迅速地被悲傷取代。我到處流亡，並與那些詛咒我的惡魔奮戰，以彌補我的過錯。在我的一生中，我都把我的惡魔之力視作是污點。
 
-但沙皇波利密爾的鬼魂給我指引了一條明路。我的命運是按照他的遺願行進的，因為他是第一位獵人，一手建立了獵人組織和這座城市來保衛異界之井──這個把我們世界和無數惡魔棲息的異界連結起來的傳送門。",,OK,,
+但波利密爾沙皇的鬼魂給我指引了一條明路。我的命運是按照他的遺願行進的，因為他是第一位獵人，一手建立了獵人組織和這座城市來保衛異界之井──這個把我們世界和無數惡魔棲息的異界連結起來的傳送門。",,OK,,
 3529,194585,Into the Abyss,Data/CodexEntry.lua(00151),,CodexEntry Journal_Entry7 DisplayName,,,,Into the Abyss,,步入深淵,,OK,,
 3530,194585,"I was going to hell.
 
@@ -1405,7 +1405,7 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 2417,194283,The City Gates,Data/MapName.lua(00012),,MapName Tutorial DisplayName,,,,The City Gates,The City Gates,城門,,OK,,
 2418,196645,"I released the Guards from the cruel fate of the undead and took whatever I could from the Fallen Keep. I can see the imposing silhouette of Castle Zagore, standing proud like the tallest headstone in this graveyard of a city. I think I can make out lights on the upper floors. Perhaps there are survivors behind the tall walls of the castle.",Data/MapName.lua(00013),,MapName Tutorial Description,,,,"I released the Guards from the cruel fate of the undeath and took whatever I could from the Fallen Keep. I can see the imposing silhouette of Castle Zagore, standing proud like the tallest headstone in this graveyard of a city. I think I can make out lights on the upper floors. Perhaps there are survivors behind the tall walls of the castle.","I released the Guards from the cruel fate of the undeath and took whatever I could from the Fallen Keep. I can see the imposing silhouette of Castle Zagore, standing proud like the tallest headstone in this graveyard of a city. I think I can make out lights on the upper floors. Perhaps there are survivors behind the tall walls of the castle.",我把守衛從不死的殘酷命運中解放了出來，並搜括了淪陷的堡壘。從這裡能看到扎古爾城的宏偉輪廓傲然挺立，仿佛這墓園中最高聳的墓碑一樣。我依稀能看到上層有微弱的燈光，也許在那厚厚的高牆背後還有倖存者。,,OK,,
 4225,196645,Bottomless Pit,Data/MapName.lua(00018),,MapName ArenaPlatforms DisplayName,,,,,,無底洞,,OK,,
-4226,196725,"I have persuaded GebaN, the demon broker, to grant me access to a mysterious void-world known as the Bottomless Pit. An experienced merchant's gamble no doubt. The lower I descend into this starry hell, tougher demons increase the odds that GebaN will have new stock to sell after he loots it from my dead body.",Data/MapName.lua(00020),,MapName ArenaPlatforms Description,,,,"I have persuaded Geban, the demon broker, to grant me access to a mysterious void-world known as the Bottomless Pit. An experienced merchant's gamble no doubt. The lower I descend into this starry hell, tougher demons increase the odds that Gaben will have new stock to sell after he loots it from my dead body.","I have persuaded GebaN, the demon broker, to grant me access to a mysterious void-world known as the Bottomless Pit. An experienced merchant's gamble no doubt. The lower I descend into this starry hell, tougher demons increase the odds that GebaN will have new stock to sell after he loots it from my dead body.",我已經說服了惡魔掮客格邦，讓我進入名為無底洞的神秘虛空世界。毫無疑問，這一定是老奸商的一場賭博。我在這地獄中走得越深，惡魔就越強大，格邦從我屍體上找到新貨來出售的機會就越大。,,OK,,
+4226,196725,"I have persuaded GebaN, the demon broker, to grant me access to a mysterious void-world known as the Bottomless Pit. An experienced merchant's gamble no doubt. The lower I descend into this starry hell, tougher demons increase the odds that GebaN will have new stock to sell after he loots it from my dead body.",Data/MapName.lua(00020),,MapName ArenaPlatforms Description,,,,"I have persuaded Geban, the demon broker, to grant me access to a mysterious void-world known as the Bottomless Pit. An experienced merchant's gamble no doubt. The lower I descend into this starry hell, tougher demons increase the odds that Gaben will have new stock to sell after he loots it from my dead body.","I have persuaded GebaN, the demon broker, to grant me access to a mysterious void-world known as the Bottomless Pit. An experienced merchant's gamble no doubt. The lower I descend into this starry hell, tougher demons increase the odds that GebaN will have new stock to sell after he loots it from my dead body.",我已經說服了惡魔掮客．格邦，讓我進入名為無底洞的神秘虛空世界。毫無疑問，這一定是老奸商的一場賭博。我在這地獄中走得越深，惡魔就越強大，格邦從我屍體上找到新貨來出售的機會就越大。,,OK,,
 2419,194283,Fallen Keep,Data/MapName.lua(00027),,MapName Tutorial_Dungeon DisplayName,,,,Fallen Keep,Fallen Keep,淪陷的堡壘,,OK,,
 2420,194283,"The gates of the keep are shut tight. I found an alternative route through a broken sewer grate. By the looks of it, something else passed through before me. The place reeks of death and I am beginning to doubt that there are any survivors here.",Data/MapName.lua(00028),,MapName Tutorial_Dungeon Description,,,,"The gates of the keep are shut tight. I found an alternative route through a broken sewer grate. By the looks of it, something else passed through before me. The place reeks of death and I am beginning to doubt that there are any survivors here.","The gates of the keep are shut tight. I found an alternative route through a broken sewer grate. By the looks of it, something else passed through before me. The place reeks of death and I am beginning to doubt that there are any survivors here.",堡壘的大門緊閉。我找到了另一條進去的路，通過破損的下水道柵欄。看樣子，有什麼東西在我之前就通過了。到處瀰漫著死亡的氣息，我開始懷疑這裡是否還有倖存者了。,,OK,,
 2421,194283,Weeping Halls,Data/MapName.lua(00033),,MapName AmuletDungeon DisplayName,,,,Weeping Halls,Weeping Halls,哀泣大廳,,OK,,
@@ -1455,22 +1455,22 @@ Only one Power Stone can be used per transmutation.",Data/CodexEntry.lua(00221),
 2463,194283,Shady Cellar,Data/MapName.lua(00408),,MapName TrapDungeon DisplayName,,,,Shady Cellar,Shady Cellar,隱蔽地窖,,OK,,
 4687,199933,Secret Pumpkin Level,Data/MapName.lua(00413),,MapName SecretPumpkinLevel DisplayName,,,0,,,秘密南瓜關,,new,,
 2464,194283,Demon World,Data/MapName.lua(00420),,MapName RiftWorld DisplayName,,,,Demon World,Demon World,魔界,,OK,,
-2604,194283,Irene,Data/NPC.lua(00005),,NPC Nadezhda display_name,,,,Irene,Irene,,,OK,,
-2605,194283,Victor Vran,Data/NPC.lua(00013),,NPC Hero display_name,,,,Victor Vran,Victor Vran,,,OK,,
-2606,194283,Private Stash,Data/NPC.lua(00019),,NPC Stash display_name,,,,Private Stash,Private Stash,,,OK,,
-2607,194283,GebaN the Broker,Data/NPC.lua(00042),,NPC GebaN display_name,,,,GebaN the Broker,GebaN the Broker,,,OK,,
-4662,199653,GebaN the Broker,Data/NPC.lua(00050),,NPC GebaN display_name,,,0,,,,,new,,
-4663,199653,GebaN the Broker,Data/NPC.lua(00058),,NPC DemonSoulsVendor display_name,,,0,,,,,new,,
-2608,194283,Queen Katarina,Data/NPC.lua(00066),,NPC Tzarina display_name,,,,Queen Katarina,Queen Katarina,,,OK,,
-2609,194283,Sir Krum,Data/NPC.lua(00073),,NPC Guard display_name,,,,Sir Krum,Sir Krum,,,OK,,
-2610,194283,Damian,Data/NPC.lua(00080),,NPC Alchemist display_name,,,,Damian,Damian,,,OK,,
-2611,194283,Patriarch Casimir,Data/NPC.lua(00088),,NPC Bozidar display_name,,,,Patriarch Casimir,Patriarch Casimir,,,OK,,
-2612,194283,Tzar Borimir,Data/NPC.lua(00096),,NPC TzarVladimir display_name,,,,Tzar Borimir,Tzar Borimir,,,OK,,
-2613,194283,Rachnoss The Host,Data/NPC.lua(00103),,NPC SpiderDemon display_name,,,,Rachnoss The Host,Rachnoss The Host,,,OK,,
-2614,194372,Wa-Lee The Solicitor,Data/NPC.lua(00109),,NPC RiftDemon display_name,,,,Wa-Lee The Solicitor,"Wa Lee, the Advocate",,,OK,,
-3542,194708,Lord Gabriel,Data/NPC.lua(00116),,NPC LordGabriel display_name,,,,Lord Gabriel,Lord Gabriel,,,OK,,
-2616,194283,Voice,Data/NPC.lua(00122),,NPC Voice display_name,,,,Voice,Voice,,,OK,,
-2617,194283,Adrian,Data/NPC.lua(00127),,NPC Adrian display_name,,,,Adrian,Adrian,,,OK,,
+2604,194283,Irene,Data/NPC.lua(00005),,NPC Nadezhda display_name,,,,Irene,Irene,艾琳,,OK,,
+2605,194283,Victor Vran,Data/NPC.lua(00013),,NPC Hero display_name,,,,Victor Vran,Victor Vran,維克多．弗蘭,,OK,,
+2606,194283,Private Stash,Data/NPC.lua(00019),,NPC Stash display_name,,,,Private Stash,Private Stash,斯戴許二兵,,OK,,
+2607,194283,GebaN the Broker,Data/NPC.lua(00042),,NPC GebaN display_name,,,,GebaN the Broker,GebaN the Broker,掮客．格邦,,OK,,
+4662,199653,GebaN the Broker,Data/NPC.lua(00050),,NPC GebaN display_name,,,0,,,掮客．格邦,,new,,
+4663,199653,GebaN the Broker,Data/NPC.lua(00058),,NPC DemonSoulsVendor display_name,,,0,,,掮客．格邦,,new,,
+2608,194283,Queen Katarina,Data/NPC.lua(00066),,NPC Tzarina display_name,,,,Queen Katarina,Queen Katarina,卡特蓮娜女王,,OK,,
+2609,194283,Sir Krum,Data/NPC.lua(00073),,NPC Guard display_name,,,,Sir Krum,Sir Krum,克魯姆爵士,,OK,,
+2610,194283,Damian,Data/NPC.lua(00080),,NPC Alchemist display_name,,,,Damian,Damian,戴米恩,,OK,,
+2611,194283,Patriarch Casimir,Data/NPC.lua(00088),,NPC Bozidar display_name,,,,Patriarch Casimir,Patriarch Casimir,卡西米爾牧首,,OK,,
+2612,194283,Tzar Borimir,Data/NPC.lua(00096),,NPC TzarVladimir display_name,,,,Tzar Borimir,Tzar Borimir,波利密爾沙皇,,OK,,
+2613,194283,Rachnoss The Host,Data/NPC.lua(00103),,NPC SpiderDemon display_name,,,,Rachnoss The Host,Rachnoss The Host,寄生主．拉諾斯,,OK,,
+2614,194372,Wa-Lee The Solicitor,Data/NPC.lua(00109),,NPC RiftDemon display_name,,,,Wa-Lee The Solicitor,"Wa Lee, the Advocate",司法官．瓦李,,OK,,
+3542,194708,Lord Gabriel,Data/NPC.lua(00116),,NPC LordGabriel display_name,,,,Lord Gabriel,Lord Gabriel,加百列領主,,OK,,
+2616,194283,Voice,Data/NPC.lua(00122),,NPC Voice display_name,,,,Voice,Voice,謎之聲,,OK,,
+2617,194283,Adrian,Data/NPC.lua(00127),,NPC Adrian display_name,,,,Adrian,Adrian,艾德里安,,OK,,
 2618,194283,Reach the Entrance to Castle Zagore,Data/Quest.lua(00049),,,,,,Reach the Entrance to Castle Zagore,Reach the Entrance to Castle Zagore,,,OK,,
 2619,194283,Reach the Entrance to Castle Zagore,Data/Quest.lua(00050),,,,,,Reach the Entrance to Castle Zagore,Reach the Entrance to Castle Zagore,,,OK,,
 2620,194283,Reach the Entrance to Castle Zagore,Data/Quest.lua(00051),,,,,,Reach the Entrance to Castle Zagore,Reach the Entrance to Castle Zagore,,,OK,,
