翻譯介面提示訊息

--- a/translation/CurrentLanguage/Game.csv
+++ b/translation/CurrentLanguage/Game.csv
@@ -2453,77 +2453,77 @@ Combine with other Gift Boxes in Transmutation to get better items",Lua/Item.lua
 4028,195942,You can add divine and wicked properties to any destiny card through transmutation,Lua/LoadingTips.lua(00071),,,,,,,,你可以透過合成給命運牌附加神聖或邪惡屬性。,,OK,,
 4029,195942,You can use transmutation to upgrade your equipment once you reach level <number>,Lua/LoadingTips.lua(00072),,,,,,,,當等級達到<number>級，你就可以使用合成來升級裝備。,,OK,,
 4030,195942,Use dyes in transmutation to change the color of your outfit,Lua/LoadingTips.lua(00073),,,,,,,,在合成中使用染料可改變服裝顏色。,,OK,,
-3656,195030,Directional (Default),Lua/LocalizationTexts.lua(00003),,,,,,,,Directional (Default),,OK,,
-4456,198919,No one hears you,Lua/LocalizationTexts.lua(00011),,,,,,,,No one hears you,,OK,,
-3951,195716,Show chat messages: <show_chat>,Lua/LocalizationTexts.lua(00015),,,,,,,,Show chat messages: <show_chat>,,OK,,
-3952,195716,Large chat messages: <large_chat>,Lua/LocalizationTexts.lua(00016),,,,,,,,Large chat messages: <large_chat>,,OK,,
-4147,196097,Unable to redeem treasure key. Error code: <error>,Lua/LocalizationTexts.lua(00028),,,,,,,,Unable to redeem treasure key. Error code: <error>,,OK,,
-4189,196416,Player Name (Level),Lua/LocalizationTexts.lua(00039),,,,,,,,Player Name (Level),,OK,,
-1313,194283,Serial number,Lua/LocalizationTexts.lua(00046),,,,,,Serial number,Serial number,,,OK,,
-1314,194283,Change password,Lua/LocalizationTexts.lua(00047),,,,,,Change password,Change password,,,OK,,
-3953,195716,Error (Invalid Code),Lua/LocalizationTexts.lua(00051),,,,,,,,Error (Invalid Code),,OK,,
-3954,195716,Invalid Treasure Key. Please make sure that you have entered the code correctly.,Lua/LocalizationTexts.lua(00052),,,,,,,,Invalid Treasure Key. Please make sure that you have entered the code correctly.,,OK,,
-3955,195716,Error (Time Limit),Lua/LocalizationTexts.lua(00053),,,,,,,,Error (Time Limit),,OK,,
-3956,195716,Unable to redeem code. The Treasure Key has expired.,Lua/LocalizationTexts.lua(00054),,,,,,,,Unable to redeem code. The Treasure Key has expired.,,OK,,
-3957,195716,Error (Use Limit),Lua/LocalizationTexts.lua(00055),,,,,,,,Error (Use Limit),,OK,,
-3958,195716,Unable to redeem code. Treasure Key use limit has been reached.,Lua/LocalizationTexts.lua(00056),,,,,,,,Unable to redeem code. Treasure Key use limit has been reached.,,OK,,
-3959,195716,Error (Already Used),Lua/LocalizationTexts.lua(00057),,,,,,,,Error (Already Used),,OK,,
-3960,195716,Unable to redeem code. Your account has already redeemed this Treasure Key.,Lua/LocalizationTexts.lua(00058),,,,,,,,Unable to redeem code. Your account has already redeemed this Treasure Key.,,OK,,
-3961,195716,Error (General),Lua/LocalizationTexts.lua(00059),,,,,,,,Error (General),,OK,,
-3496,194585,Victor Vran,Lua/LocalizationTexts.lua(00074),,,,,,Victor Vran,Victor Vran,,,OK,,
-4594,198927,Victor Vran Platinum trophy,Lua/LocalizationTexts.lua(00079),,,,,,,,Victor Vran Platinum trophy,,OK,,
-4595,198927,Collected all other Victor Vran trophies,Lua/LocalizationTexts.lua(00080),,,,,,,,Collected all other Victor Vran trophies,,OK,,
-4600,199130,Victor Vran base game,Lua/LocalizationTexts.lua(00087),,,,,,,,Victor Vran base game,,OK,,
-4593,198927,Trophy set for Victor Vran,Lua/LocalizationTexts.lua(00088),,,,,,,,Trophy set for Victor Vran,,OK,,
-4148,196097,Treasure Clue,Lua/LocalizationTexts.lua(00091),,,,,,,,Treasure Clue,,OK,,
-4149,196097,Gamepad Rumble,Lua/LocalizationTexts.lua(00095),,,,,,,,Gamepad Rumble,,OK,,
-4227,196977,FPS Cap,Lua/LocalizationTexts.lua(00096),,,,,,,,FPS Cap,,OK,,
-4228,196977,Unlimited,Lua/LocalizationTexts.lua(00097),,FPS Cap value,,,,,,Unlimited,,OK,,
-4192,196416,PvP Arena - The Freakshow,Lua/LocalizationTexts.lua(00101),,,,,,,,PvP Arena - The Freakshow,,OK,,
-4193,196416,Step right up! Enter the Freakshow Arena where you may resolve who is the top hunter - by a fight to the bitter end! You may now enter the Freakshow PvP Arena to duel your fellow hunters through the world map.,Lua/LocalizationTexts.lua(00102),,,,,,,,Step right up! Enter the Freakshow Arena where you may resolve who is the top hunter - by a fight to the bitter end! You may now enter the Freakshow PvP Arena to duel your fellow hunters through the world map.,,OK,,
-4194,196416,Endless Battleground - Bottomless Pit,Lua/LocalizationTexts.lua(00106),,,,,,,,Endless Battleground - Bottomless Pit,,OK,,
-4195,196416,The way down the Bottomless Pit has now been revealed to you - a loathsome journey into an unknown void consisting of demon infested arenas. No one knows the true origin and purpose of this ethereal place. Find it on the world map.,Lua/LocalizationTexts.lua(00107),,,,,,,,The way down the Bottomless Pit has now been revealed to you - a loathsome journey into an unknown void consisting of demon infested arenas. No one knows the true origin and purpose of this ethereal place. Find it on the world map.,,OK,,
-4196,196416,Gift Box,Lua/LocalizationTexts.lua(00111),,,,,,,,Gift Box,,OK,,
-4198,196416,Gift Boxes offer better drops and higher chances to gain legendary items,Lua/LocalizationTexts.lua(00112),,,,,,,,Gift Boxes offer better drops and higher chances to gain legendary items,,OK,,
-4271,197475,Favorite,Lua/LocalizationTexts.lua(00120),,,,,,,,Favorite,,OK,,
-4338,198395,Emote: Dance,Lua/LocalizationTexts.lua(00133),,,,,,,,Emote: Dance,,OK,,
-4339,198395,Emote: Point,Lua/LocalizationTexts.lua(00134),,,,,,,,Emote: Point,,OK,,
-4340,198395,Emote: Wave,Lua/LocalizationTexts.lua(00135),,,,,,,,Emote: Wave,,OK,,
-4341,198395,Emote: Sit,Lua/LocalizationTexts.lua(00136),,,,,,,,Emote: Sit,,OK,,
-4342,198395,Emote: Kneel,Lua/LocalizationTexts.lua(00137),,,,,,,,Emote: Kneel,,OK,,
-4343,198395,Emote: Flex,Lua/LocalizationTexts.lua(00138),,,,,,,,Emote: Flex,,OK,,
-4344,198395,Emote: Beckon,Lua/LocalizationTexts.lua(00139),,,,,,,,Emote: Beckon,,OK,,
-4345,198395,Emote: Bow,Lua/LocalizationTexts.lua(00140),,,,,,,,Emote: Bow,,OK,,
-4346,198395,Emote: Cheer,Lua/LocalizationTexts.lua(00141),,,,,,,,Emote: Cheer,,OK,,
-4347,198395,Emote: Cry,Lua/LocalizationTexts.lua(00142),,,,,,,,Emote: Cry,,OK,,
-4348,198395,Emote: Laugh,Lua/LocalizationTexts.lua(00143),,,,,,,,Emote: Laugh,,OK,,
-4349,198395,Emote: No,Lua/LocalizationTexts.lua(00144),,,,,,,,Emote: No,,OK,,
-4350,198395,Emote: Salute,Lua/LocalizationTexts.lua(00145),,,,,,,,Emote: Salute,,OK,,
-4351,198395,Emote: Threaten,Lua/LocalizationTexts.lua(00146),,,,,,,,Emote: Threaten,,OK,,
-4352,198395,Emote: Yes,Lua/LocalizationTexts.lua(00147),,,,,,,,Emote: Yes,,OK,,
-4354,199653,Once you set this as the active emote you can use it with <DPadUp>,Lua/LocalizationTexts.lua(00149),,,,,198395,Once you set this as a active emote you can use it with <DPadUp>.,Once you set this as a active emote you can use it with <DPadUp>.,,,changed,,
-4355,199653,Once you set this as the active emote you can use it with <DefaultEmote>,Lua/LocalizationTexts.lua(00151),,,,,198395,Once you set this as a active emote you can use it with <UseDefaultEmote>.,Once you set this as a active emote you can use it with <UseDefaultEmote>.,,,changed,"Tag <DefaultEmote> not present in translated text
+3656,195030,Directional (Default),Lua/LocalizationTexts.lua(00003),,,,,,,,指向（預設）,,OK,,
+4456,198919,No one hears you,Lua/LocalizationTexts.lua(00011),,,,,,,,沒人聽到,,OK,,
+3951,195716,Show chat messages: <show_chat>,Lua/LocalizationTexts.lua(00015),,,,,,,,顯示聊天訊息：<show_chat>,,OK,,
+3952,195716,Large chat messages: <large_chat>,Lua/LocalizationTexts.lua(00016),,,,,,,,大型聊天訊息：<large_chat>,,OK,,
+4147,196097,Unable to redeem treasure key. Error code: <error>,Lua/LocalizationTexts.lua(00028),,,,,,,,無法兌換藏寶密碼。錯誤代碼：<error>,,OK,,
+4189,196416,Player Name (Level),Lua/LocalizationTexts.lua(00039),,,,,,,,玩家名稱（等級）,,OK,,
+1313,194283,Serial number,Lua/LocalizationTexts.lua(00046),,,,,,Serial number,Serial number,序號,,OK,,
+1314,194283,Change password,Lua/LocalizationTexts.lua(00047),,,,,,Change password,Change password,變更密碼,,OK,,
+3953,195716,Error (Invalid Code),Lua/LocalizationTexts.lua(00051),,,,,,,,錯誤（無效密碼）,,OK,,
+3954,195716,Invalid Treasure Key. Please make sure that you have entered the code correctly.,Lua/LocalizationTexts.lua(00052),,,,,,,,無效的藏寶密碼。請確保你已經輸入正確的密碼。,,OK,,
+3955,195716,Error (Time Limit),Lua/LocalizationTexts.lua(00053),,,,,,,,錯誤（時間限制）,,OK,,
+3956,195716,Unable to redeem code. The Treasure Key has expired.,Lua/LocalizationTexts.lua(00054),,,,,,,,無法兌換密碼。藏寶密碼已過期。,,OK,,
+3957,195716,Error (Use Limit),Lua/LocalizationTexts.lua(00055),,,,,,,,錯誤（使用上限）,,OK,,
+3958,195716,Unable to redeem code. Treasure Key use limit has been reached.,Lua/LocalizationTexts.lua(00056),,,,,,,,無法兌換密碼。藏寶密碼已達使用上限。,,OK,,
+3959,195716,Error (Already Used),Lua/LocalizationTexts.lua(00057),,,,,,,,錯誤（已經使用）,,OK,,
+3960,195716,Unable to redeem code. Your account has already redeemed this Treasure Key.,Lua/LocalizationTexts.lua(00058),,,,,,,,無法兌換密碼。你的帳號已經兌換過這個藏寶密碼。,,OK,,
+3961,195716,Error (General),Lua/LocalizationTexts.lua(00059),,,,,,,,錯誤,,OK,,
+3496,194585,Victor Vran,Lua/LocalizationTexts.lua(00074),,,,,,Victor Vran,Victor Vran,《獵魔奇俠》,,OK,,
+4594,198927,Victor Vran Platinum trophy,Lua/LocalizationTexts.lua(00079),,,,,,,,《獵魔奇俠》白金獎盃,,OK,,
+4595,198927,Collected all other Victor Vran trophies,Lua/LocalizationTexts.lua(00080),,,,,,,,已收集所有《獵魔奇俠》獎盃,,OK,,
+4600,199130,Victor Vran base game,Lua/LocalizationTexts.lua(00087),,,,,,,,《獵魔奇俠》主遊戲,,OK,,
+4593,198927,Trophy set for Victor Vran,Lua/LocalizationTexts.lua(00088),,,,,,,,《獵魔奇俠》獎盃組,,OK,,
+4148,196097,Treasure Clue,Lua/LocalizationTexts.lua(00091),,,,,,,,藏寶線索,,OK,,
+4149,196097,Gamepad Rumble,Lua/LocalizationTexts.lua(00095),,,,,,,,手把震動,,OK,,
+4227,196977,FPS Cap,Lua/LocalizationTexts.lua(00096),,,,,,,,幀數鎖定,,OK,,
+4228,196977,Unlimited,Lua/LocalizationTexts.lua(00097),,FPS Cap value,,,,,,無限制,,OK,,
+4192,196416,PvP Arena - The Freakshow,Lua/LocalizationTexts.lua(00101),,,,,,,,競技場 - 畸形秀,,OK,,
+4193,196416,Step right up! Enter the Freakshow Arena where you may resolve who is the top hunter - by a fight to the bitter end! You may now enter the Freakshow PvP Arena to duel your fellow hunters through the world map.,Lua/LocalizationTexts.lua(00102),,,,,,,,狂歡吧！進入畸形秀競技場，在這裡你可以證明誰才是頂尖獵人──就看誰能血戰到底！你也可以進入畸形秀玩家競技場，與陪你走遍世界各地的伙伴一決高下。,,OK,,
+4194,196416,Endless Battleground - Bottomless Pit,Lua/LocalizationTexts.lua(00106),,,,,,,,無盡戰場 - 無底洞,,OK,,
+4195,196416,The way down the Bottomless Pit has now been revealed to you - a loathsome journey into an unknown void consisting of demon infested arenas. No one knows the true origin and purpose of this ethereal place. Find it on the world map.,Lua/LocalizationTexts.lua(00107),,,,,,,,無底洞的入口現在對你開放──這是一段進入未知虛空的討厭旅程，那裡是由群魔盤踞的競技場所構成。沒有人知道這個地方的起源和建造目的。你可以在世界地圖上找到它。,,OK,,
+4196,196416,Gift Box,Lua/LocalizationTexts.lua(00111),,,,,,,,禮物箱,,OK,,
+4198,196416,Gift Boxes offer better drops and higher chances to gain legendary items,Lua/LocalizationTexts.lua(00112),,,,,,,,禮物箱有更好的寶物，還有更高的機會獲得傳奇物品。,,OK,,
+4271,197475,Favorite,Lua/LocalizationTexts.lua(00120),,,,,,,,最愛,,OK,,
+4338,198395,Emote: Dance,Lua/LocalizationTexts.lua(00133),,,,,,,,表情：跳舞,,OK,,
+4339,198395,Emote: Point,Lua/LocalizationTexts.lua(00134),,,,,,,,表情：指向,,OK,,
+4340,198395,Emote: Wave,Lua/LocalizationTexts.lua(00135),,,,,,,,表情：揮手,,OK,,
+4341,198395,Emote: Sit,Lua/LocalizationTexts.lua(00136),,,,,,,,表情：坐下,,OK,,
+4342,198395,Emote: Kneel,Lua/LocalizationTexts.lua(00137),,,,,,,,表情：跪下,,OK,,
+4343,198395,Emote: Flex,Lua/LocalizationTexts.lua(00138),,,,,,,,表情：伸展,,OK,,
+4344,198395,Emote: Beckon,Lua/LocalizationTexts.lua(00139),,,,,,,,表情：召喚,,OK,,
+4345,198395,Emote: Bow,Lua/LocalizationTexts.lua(00140),,,,,,,,表情：鞠躬,,OK,,
+4346,198395,Emote: Cheer,Lua/LocalizationTexts.lua(00141),,,,,,,,表情：歡呼,,OK,,
+4347,198395,Emote: Cry,Lua/LocalizationTexts.lua(00142),,,,,,,,表情：哭泣,,OK,,
+4348,198395,Emote: Laugh,Lua/LocalizationTexts.lua(00143),,,,,,,,表情：大笑,,OK,,
+4349,198395,Emote: No,Lua/LocalizationTexts.lua(00144),,,,,,,,表情：拒絕,,OK,,
+4350,198395,Emote: Salute,Lua/LocalizationTexts.lua(00145),,,,,,,,表情：敬禮,,OK,,
+4351,198395,Emote: Threaten,Lua/LocalizationTexts.lua(00146),,,,,,,,表情：威脅,,OK,,
+4352,198395,Emote: Yes,Lua/LocalizationTexts.lua(00147),,,,,,,,表情：接受,,OK,,
+4354,199653,Once you set this as the active emote you can use it with <DPadUp>,Lua/LocalizationTexts.lua(00149),,,,,198395,Once you set this as a active emote you can use it with <DPadUp>.,Once you set this as a active emote you can use it with <DPadUp>.,當你設此為常用表情時，你可以按 <DPadUp> 使用。,,changed,,
+4355,199653,Once you set this as the active emote you can use it with <DefaultEmote>,Lua/LocalizationTexts.lua(00151),,,,,198395,Once you set this as a active emote you can use it with <UseDefaultEmote>.,Once you set this as a active emote you can use it with <UseDefaultEmote>.,當你設此為常用表情時，你可以按 <DefaultEmote> 使用。,,changed,"Tag <DefaultEmote> not present in translated text
 Tag <UseDefaultEmote> not present in original text",
-4357,198395,Set as Active Emote,Lua/LocalizationTexts.lua(00155),,,,,,,,Set as Active Emote,,OK,,
-4358,198395,Can be used by typing /dance in the chat window.,Lua/LocalizationTexts.lua(00157),,,,,,,,Can be used by typing /dance in the chat window.,,OK,,
-4359,198395,Can be used by typing /point in the chat window.,Lua/LocalizationTexts.lua(00158),,,,,,,,Can be used by typing /point in the chat window.,,OK,,
-4360,198395,Can be used by typing /wave in the chat window.,Lua/LocalizationTexts.lua(00159),,,,,,,,Can be used by typing /wave in the chat window.,,OK,,
-4361,198395,Can be used by typing /sit in the chat window.,Lua/LocalizationTexts.lua(00160),,,,,,,,Can be used by typing /sit in the chat window.,,OK,,
-4362,198395,Can be used by typing /kneel in the chat window.,Lua/LocalizationTexts.lua(00161),,,,,,,,Can be used by typing /kneel in the chat window.,,OK,,
-4363,198395,Can be used by typing /flex in the chat window.,Lua/LocalizationTexts.lua(00162),,,,,,,,Can be used by typing /flex in the chat window.,,OK,,
-4364,198395,Can be used by typing /beckon in the chat window.,Lua/LocalizationTexts.lua(00163),,,,,,,,Can be used by typing /beckon in the chat window.,,OK,,
-4365,198395,Can be used by typing /bow in the chat window.,Lua/LocalizationTexts.lua(00164),,,,,,,,Can be used by typing /bow in the chat window.,,OK,,
-4366,198395,Can be used by typing /cheer in the chat window.,Lua/LocalizationTexts.lua(00165),,,,,,,,Can be used by typing /cheer in the chat window.,,OK,,
-4367,198395,Can be used by typing /cry in the chat window.,Lua/LocalizationTexts.lua(00166),,,,,,,,Can be used by typing /cry in the chat window.,,OK,,
-4368,198395,Can be used by typing /laugh in the chat window.,Lua/LocalizationTexts.lua(00167),,,,,,,,Can be used by typing /laugh in the chat window.,,OK,,
-4369,198395,Can be used by typing /no in the chat window.,Lua/LocalizationTexts.lua(00168),,,,,,,,Can be used by typing /no in the chat window.,,OK,,
-4370,198395,Can be used by typing /salute in the chat window.,Lua/LocalizationTexts.lua(00169),,,,,,,,Can be used by typing /salute in the chat window.,,OK,,
-4371,198395,Can be used by typing /threaten in the chat window.,Lua/LocalizationTexts.lua(00170),,,,,,,,Can be used by typing /threaten in the chat window.,,OK,,
-4372,198395,Can be used by typing /yes in the chat window.,Lua/LocalizationTexts.lua(00171),,,,,,,,Can be used by typing /yes in the chat window.,,OK,,
-4374,198395,Keyboard,Lua/LocalizationTexts.lua(00177),,,,,,,,Keyboard,,OK,,
-4457,198919,Steam virtual keyboard requires Steam Big Picture Mode to be enabled. Please restart the game from Big Picture Mode in order to use the Steam virtual keyboard.,Lua/LocalizationTexts.lua(00179),,,,,,,,Steam virtual keyboard requires Steam Big Picture Mode to be enabled. Please restart the game from Big Picture Mode in order to use the Steam virtual keyboard.,,OK,,
-4375,198395,Render Resolution,Lua/LocalizationTexts.lua(00183),,,,,,,,Render Resolution,,OK,,
-4376,198395,UI Scale,Lua/LocalizationTexts.lua(00184),,,,,,,,UI Scale,,OK,,
+4357,198395,Set as Active Emote,Lua/LocalizationTexts.lua(00155),,,,,,,,設成常用表情,,OK,,
+4358,198395,Can be used by typing /dance in the chat window.,Lua/LocalizationTexts.lua(00157),,,,,,,,可以在聊天視窗下輸入/dance使用。,,OK,,
+4359,198395,Can be used by typing /point in the chat window.,Lua/LocalizationTexts.lua(00158),,,,,,,,可以在聊天視窗下輸入/point使用。,,OK,,
+4360,198395,Can be used by typing /wave in the chat window.,Lua/LocalizationTexts.lua(00159),,,,,,,,可以在聊天視窗下輸入/wave使用。,,OK,,
+4361,198395,Can be used by typing /sit in the chat window.,Lua/LocalizationTexts.lua(00160),,,,,,,,可以在聊天視窗下輸入/sit使用。,,OK,,
+4362,198395,Can be used by typing /kneel in the chat window.,Lua/LocalizationTexts.lua(00161),,,,,,,,可以在聊天視窗下輸入/kneel使用。,,OK,,
+4363,198395,Can be used by typing /flex in the chat window.,Lua/LocalizationTexts.lua(00162),,,,,,,,可以在聊天視窗下輸入/flex使用。,,OK,,
+4364,198395,Can be used by typing /beckon in the chat window.,Lua/LocalizationTexts.lua(00163),,,,,,,,可以在聊天視窗下輸入/beckon使用。,,OK,,
+4365,198395,Can be used by typing /bow in the chat window.,Lua/LocalizationTexts.lua(00164),,,,,,,,可以在聊天視窗下輸入/bow使用。,,OK,,
+4366,198395,Can be used by typing /cheer in the chat window.,Lua/LocalizationTexts.lua(00165),,,,,,,,可以在聊天視窗下輸入/cheer使用。,,OK,,
+4367,198395,Can be used by typing /cry in the chat window.,Lua/LocalizationTexts.lua(00166),,,,,,,,可以在聊天視窗下輸入/cry使用。,,OK,,
+4368,198395,Can be used by typing /laugh in the chat window.,Lua/LocalizationTexts.lua(00167),,,,,,,,可以在聊天視窗下輸入/laugh使用。,,OK,,
+4369,198395,Can be used by typing /no in the chat window.,Lua/LocalizationTexts.lua(00168),,,,,,,,可以在聊天視窗下輸入/no使用。,,OK,,
+4370,198395,Can be used by typing /salute in the chat window.,Lua/LocalizationTexts.lua(00169),,,,,,,,可以在聊天視窗下輸入/salute使用。,,OK,,
+4371,198395,Can be used by typing /threaten in the chat window.,Lua/LocalizationTexts.lua(00170),,,,,,,,可以在聊天視窗下輸入/threaten使用。,,OK,,
+4372,198395,Can be used by typing /yes in the chat window.,Lua/LocalizationTexts.lua(00171),,,,,,,,可以在聊天視窗下輸入/yes使用。,,OK,,
+4374,198395,Keyboard,Lua/LocalizationTexts.lua(00177),,,,,,,,鍵盤,,OK,,
+4457,198919,Steam virtual keyboard requires Steam Big Picture Mode to be enabled. Please restart the game from Big Picture Mode in order to use the Steam virtual keyboard.,Lua/LocalizationTexts.lua(00179),,,,,,,,Steam虛擬鍵盤需要Big Picture模式才能啟用。請使用Big Picture模式重啟遊戲以啟用Steam虛擬鍵盤。,,OK,,
+4375,198395,Render Resolution,Lua/LocalizationTexts.lua(00183),,,,,,,,繪圖解析度,,OK,,
+4376,198395,UI Scale,Lua/LocalizationTexts.lua(00184),,,,,,,,介面大小,,OK,,
 627,194283,Loot,Lua/LootObj.lua(00493),,,,,,Loot,Loot,,,OK,,
 628,194283,<name>,Lua/LootWeapon.lua(00127),,masculine,,,,<name>,<name>,,,OK,,
 3699,195189,<name>,Lua/LootWeapon.lua(00128),,feminine,,,,,,<name>,,OK,,
